borsh-derive/src/internals/serialize/structs/snapshots/simple_generic_tuple_struct.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T> borsh::ser::BorshSerialize for TupleA<T>
where
    T: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        borsh::BorshSerialize::serialize(&self.0, writer)?;
        borsh::BorshSerialize::serialize(&self.1, writer)?;
        ::core::result::Result::Ok(())
    }
}
