borsh-derive/src/internals/serialize/structs/snapshots/simple_generics.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::ser::BorshSerialize for A<K, V>
where
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        borsh::BorshSerialize::serialize(&self.x, writer)?;
        borsh::BorshSerialize::serialize(&self.y, writer)?;
        ::core::result::Result::Ok(())
    }
}
