borsh-derive/src/internals/serialize/structs/snapshots/simple_struct_with_custom_crate-2.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl reexporter::borsh::ser::BorshSerializeAsync for A {
    async fn serialize<'async_variant, __W: reexporter::borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), reexporter::borsh::io::Error> {
        <u64 as reexporter::borsh::BorshSerializeAsync>::serialize(&self.x, writer)
            .await?;
        <String as reexporter::borsh::BorshSerializeAsync>::serialize(&self.y, writer)
            .await?;
        ::core::result::Result::Ok(())
    }
}
