borsh-derive/src/internals/serialize/structs/snapshots/simple_struct_with_custom_crate.snap
---
source: borsh-derive/src/internals/serialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl reexporter::borsh::ser::BorshSerialize for A {
    fn serialize<__W: reexporter::borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), reexporter::borsh::io::Error> {
        reexporter::borsh::BorshSerialize::serialize(&self.x, writer)?;
        reexporter::borsh::BorshSerialize::serialize(&self.y, writer)?;
        Ok(())
    }
}
